# Clyde

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  zensical.toml
.github/workflows/: workflow.yaml
assets/: clyde_evil.json  readme_banner.psd  social_preview.psd
attachment/: index.html
clyde/: __init__.py  attachment.py  component.py  embed.py  markdown.py  poll.py  validation.py  webhook.py
clyde/components/: action_row.py  button.py  container.py  file.py  media_gallery.py  section.py  seperator.py  text_display.py  thumbnail.py  unfurled_media_item.py
component/: index.html
docs/: attachment.md  index.md
embed/: index.html
markdown/: index.html
poll/: index.html
search/: search_index.json
tests/clyde/: constants.py  test_component.py  test_embed.py  test_poll.py  test_webhook.py
timestamp/: index.html
validation/: index.html
webhook/: index.html
